--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
-        "php-di/php-di": "^6.4"
+        "php-di/php-di": "^6.4",
+        "firebase/php-jwt": "^6.2"
     }
 }
